# Data-Structure

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_c.sh  build_cpp.sh  main.c  main.cpp
Array/: CMakeLists.txt  array.cpp
Array/include/: array.hpp
Linked List/: Doubley_Linked_List.c  Single_Linked_List.c
LinkedList/: CMakeLists.txt  linked_list.c  linked_list.cpp  linked_list.py
LinkedList/include/: linked_list.h  linked_list.hpp
Queue/: CMakeLists.txt  queue.c  queue.cpp  queue.py
Queue/include/: queue.h  queue.hpp
Stack/: CMakeLists.txt  stack.c  stack.cpp  stack.py
Stack/include/: stack.h  stack.hpp
Tree/: Binary_Search_Tree.c  Binary_Tree.c
